[package]
name = "web_test"
version = "0.1.0"
authors = ["afriron <afriron@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.12", features = ["full"] }
tokio = { version = "1.2.0", features = ["full"] }